--- a/css/screen.css
+++ b/css/screen.css
@@ -459,3 +459,48 @@ p.copyright-footer a {
 .exhibit-item-show #citation #citation-value {
     margin-bottom: 0.5em;
 }
+
+/* fcd1, Jan 2015: */
+/* START of Changes for move to Omeka 2.2.2 (and ExhibitBuilder 3.1.3) */
+
+.layout-gallery .exhibit-item.exhibit-gallery-item {
+  width: 25%;
+  float: left;
+  margin: 2%;
+}
+
+.layout-gallery .exhibit-item.exhibit-gallery-item .link-to-item-page {
+  font-size: 0.75em;
+  text-align: center;
+  margin: auto;
+  display: block;
+}
+
+.layout-gallery .exhibit-item.exhibit-gallery-item .exhibit-item-link {
+  text-align: center;
+  display: block;
+}
+
+.exhibit-block.layout-gallery .gallery,
+.exhibit-block.layout-file-text {
+  overflow: hidden;
+}
+
+.layout-file-text .exhibit-text.left.fullsize.captions-center {
+  float: right;
+  width: 400px;
+  padding: 5px;
+}
+
+.layout-file-text .exhibit-items.left.fullsize.captions-center {
+  float: left;
+  width: 250px;
+  padding: 5px;
+}
+
+.layout-file-text .exhibit-items.left.fullsize.captions-center img.full {
+  width: 100%;
+}
+
+/* fcd1, Jan 2015: */
+/* START of Changes for move to Omeka 2.2.2 (and ExhibitBuilder 3.1.3) */
