--- a/css/screen.css
+++ b/css/screen.css
@@ -503,4 +503,4 @@ p.copyright-footer a {
 }
 
 /* fcd1, Jan 2015: */
-/* START of Changes for move to Omeka 2.2.2 (and ExhibitBuilder 3.1.3) */
+/* END of Changes for move to Omeka 2.2.2 (and ExhibitBuilder 3.1.3) */
